--- a/_posts/2021-02-23-geospatial-network-visualization/geospatial-network-visualization.Rmd
+++ b/_posts/2021-02-23-geospatial-network-visualization/geospatial-network-visualization.Rmd
@@ -1,16 +1,16 @@
 ---
 title: "Geospatial Network Visualization"
-description: |
-  `sfnetworks` meets `ggraph`
+description: "{sfnetworks} meets {ggraph}"
 author: Lorena Abad
-date: 02-23-2021
+date: 02-27-2021
 output:
   distill::distill_article:
     toc: true
-    toc_depth: 3
+    toc_float: true
+    toc_depth: 2
     self_contained: false
 categories:
-  - rspatial
+  - r-spatial
   - dataviz
   - networks
 draft: true
@@ -51,7 +51,7 @@ There are already several possibilities to use `sfnetworks` and `ggraph` togethe
 
 The real aim of this integration is to allow you to do all this crazy graph representations **+** graph representations in geographical space! Not everything is possible yet, and you will see below some limitations. 
 
-For now, I will illustrate how with the current *status quo*, we can already integrate `sfnetworks` and `ggraph` for spatial network visualizations. So let's get started!
+For now I will illustrate how, with the current *status quo*, we can already integrate `sfnetworks` and `ggraph` for spatial network visualizations. So let's get started!
 
 # The Three Pillars
 
@@ -63,8 +63,6 @@ library(ggimage)
 ```
 
 ```{r, echo = F, fig.height = 2.5, fig.width = 8, fig.align = "center"}
-pillars = "https://www.pngfind.com/pngs/m/78-788780_pillars-png-3-pillars-clip-art-transparent-png.png"
-
 labs = data.frame(
   l = c("Layouts", "Nodes", "Edges"), 
   x = c(1.335, 2, 2.665),
@@ -85,17 +83,17 @@ ggplot(labs, aes(x, y)) +
 
 1. *Layouts* contain the vertical and horizontal placement of the nodes, giving them a physical placement. In spatial terms, they contain the coordinates of where each node should be mapped. 
 
-2. *Nodes* refer to which representation should the nodes have. And this really refers to which visual representation they should have, known in `ggplot2` as `geom`. Should they be points, tiles, voronoi polygons? `ggraph` contains a large list of node representations via `geom_node_*()`. 
+2. *Nodes* refer to which representation the nodes should have. And this really refers to which visual representation they should have, known in `ggplot2` as `geom`. Should they be points, tiles, voronoi polygons? `ggraph` contains a large list of node representations via `geom_node_*()`.
 
 3. *Edges* refer to the way nodes are connected between each other visually. Again here we are talking about `ggplot2` geometries and the `geom_edge_*()` functions should give you a big pool of options to represent this. 
 
-Let's go through the possibilities to use these with `sfnetworks` also in these three steps.
+Let's go through the possibilities to use each pillar with `sfnetworks` objects.
 
 ## 1. `layout_sf()`
 
-As mentioned before, a *layout* is basically the physical representation of where to place our nodes. The nice thing about `ggraph`, is that you can give your own customized layout. 
+As mentioned before, a *layout* is basically the physical representation of where to place our nodes. Talking about geospatial networks, what better place to put them than in their geographical location! A really nice thing about `ggraph`, is that you can give your own customized layout, by passing custom X and Y coordinates for node placement.
 
-In `sfnetworks` on the other hand, we have a spatial network consisting of nodes and edges. These interrelated objects are stored together as `sf` tibbles into an `sfnetwork` object. Since we have a nice integration with `sf`, we can extract the coordinates of our nodes as an X and Y list, which we can pass to `ggraph`. Let me give you a quick demo instead of all these words. I will illustrate this with the `roxel` dataset from `sfnetworks`.
+In `sfnetworks`, we have a spatial network consisting of nodes and edges. These interrelated objects are stored together as `sf` tibbles into an `sfnetwork` object. Since we have a nice integration with `sf`, we can extract the coordinates of our nodes as an X and Y list, which we can pass to `ggraph`. Let me give you a quick demo instead of all these words. I will illustrate this with the `roxel` dataset from `sfnetworks`.
 
 ```{r}
 library(sfnetworks)
@@ -104,7 +102,7 @@ library(sf)
 net %>% st_coordinates() %>% head()
 ```
 
-Now, how do we create a layout that does this automatically? Well here is a little helper function that will take care of that for you. It will put the X and Y coordinates of any `sfnetwork` object passed to it. 
+Now, how do we create a layout that extracts the coordinates automatically? Well here is a little helper function that will take care of that for you. It will extract the X and Y coordinates of any `sfnetwork` object into a data.frame that is understood by `ggraph()`. 
 
 ```{r}
 layout_sf = function(graph){
@@ -119,15 +117,15 @@ layout_sf = function(graph){
 How do we use it? Well, like this:
 
 ```{r}
-library(ggraph, quietly = T)
+library(ggraph)
 ggraph(net, layout = layout_sf)
 ```
 
-Yes! That's it. You are probably looking now at a beautiful white canvas, but internally `ggraph` has already a plan for every node you will map next, let's see it in action in the next step.
+Yes! That's it. You are probably looking now at a beautiful white canvas, but internally `ggraph()` has already a plan for every node you will map next, let's see it in action in the next step.
 
 ## 2. `geom_node_*()`
 
-The most obvious way to represent a node in space is with a point. This is how we would do it if we were plotting `POINT` geometries in space. With `ggraph` we can get that representation with `geom_node_point()`. Note that other useful node representations in space might be using a label or text, we can achieve that with `geom_node_label()` and `geom_node_text()`, respectively.
+The most obvious way to represent a node in space is with a point. This is how we would do it if we were plotting `POINT` geometries in space. With ggraph we can get that representation with `geom_node_point()`. Note that other useful node representations in space might be using a label or text. We can achieve that with `geom_node_label()` and `geom_node_text()`, respectively.
 
 Building on our previous plot:
 
@@ -136,9 +134,9 @@ ggraph(net, layout = layout_sf) +
   geom_node_point()
 ```
 
-Oh yes, there are our nodes! But wait... If you are familiar with the `sfnetworks` vignettes, you might be thinking: *this looks distorted...* and yes, it does. 
+Oh yes, there are our nodes! But wait... If you are familiar with the sfnetworks vignettes, you might be thinking: *this looks distorted...* and yes, it does. 
 
-Unfortunately, `ggraph` does not know about CRS so it will accommodate your X and Y axes to the size of your plot. This is one of the reasons why some internal tweaks are needed in `ggraph` to make this work better. But for now a way to go around this is to use `coord_sf()`:
+Unfortunately, `ggraph()` does not know about CRS so it will accommodate your X and Y axes to the size of your plot. This is one of the reasons why some internal tweaks are needed in ggraph to make this work better. But for now a way to go around this is to use `coord_sf()`:
 
 ```{r}
 ggraph(net, layout = layout_sf) +
@@ -148,22 +146,24 @@ ggraph(net, layout = layout_sf) +
 
 Much better. Now, our plot also takes into consideration the CRS and places our nodes properly. 
 
-Now let's give some aesthetics to our plot. If you scroll back up, you will see that our nodes don't have attributes, other than their geometry, so what should we look at? What about the degree centrality of the node? This will assign the count of the adjacent edges of each of our nodes. We can do this with `centrality_degree()` function in `tidygraph`.
+Now let's give some aesthetics to our plot. If you scroll back up, you will see that our nodes don't have attributes, other than their geometry, so what should we look at? What about the degree centrality of the node? This will assign the count of the adjacent edges of each of our nodes. We can do this with the `centrality_degree()` function in `tidygraph`.
 
-A really nice feature about `ggraph` is that we don't need to go back to our original graph, mutate our network, save as a new object, and then call it again inside `ggraph()`. We can just call the function directly inside the `aes()`, where the calculation will be done on the fly! Read more about it [here!](https://ggraph.data-imaginist.com/articles/tidygraph.html#access-to-tidygraph-algorithms-in-ggraph-code-1)
+A really nice feature about `ggraph` is that we don't need to go back to our original graph, mutate our network, save as a new object, and then call it again inside `ggraph()`. We can just call the function directly inside the `aes()`, where the calculation will be done on the fly! [Read more about it here.](https://ggraph.data-imaginist.com/articles/tidygraph.html#access-to-tidygraph-algorithms-in-ggraph-code-1)
 
 ```{r}
-library(tidygraph, warn.conflicts = F, quietly = T)
+library(tidygraph)
 ggraph(net, layout = layout_sf) +
   geom_node_point(aes(color = centrality_degree())) +
   coord_sf(crs = st_crs(net))
 ```
 
-Directly passing functions also works inside `facet_*()` functions. `sfnetworks` has a couple of functions that can be evaluated in this way. To illustrate we can use `node_X`, which gives us the **X** coordinate of the nodes. 
+Directly passing functions also works inside `facet_*()` functions. sfnetworks has a couple of functions that can be evaluated in this way. To illustrate we can use `node_X()`, which gives us the **X** coordinate of the nodes. 
 
 ```{r}
 ggraph(net, layout = layout_sf) +
-  geom_node_point(aes(color = centrality_degree())) +
+  geom_node_point(
+    aes(color = centrality_degree())
+  ) +
   coord_sf(crs = st_crs(net)) +
   facet_nodes(~node_X() > 7.535)
 ```
@@ -174,7 +174,7 @@ Let's move on to the final step, and connect these nodes to each other.
 
 ## 3. `geom_edge_*()`
 
-Now comes the tricky part. When we are working with graph structures in, let's call it, "abstract" space, the connections between the nodes is basically drawing a line between each pair. Although `ggraph` has quite a long list to represent edges ([see here](https://ggraph.data-imaginist.com/reference/index.html#section-edges)), the connections that I find most useful for spatial networks are `geom_edge_link()` and `geom_edge_arc()`, which create a straight line or an arc between connected nodes.
+Now comes the tricky part. When we are working with graph structures in, let's call it, "abstract" space, the connections between the nodes are basically straight lines between each `from` and `to` pair. Although `ggraph` has quite a long list to represent edges ([see here](https://ggraph.data-imaginist.com/reference/index.html#section-edges)), the connections that I find most relevant for spatial networks are `geom_edge_link()` and `geom_edge_arc()`, which create a straight line or an arc between connected nodes.
 
 ```{r}
 ggraph(net, layout_sf) +
@@ -183,7 +183,7 @@ ggraph(net, layout_sf) +
   coord_sf(crs = st_crs(net))
 ```
 
-Yes, I bet you are thinking this could go to [accidental aRt](https://twitter.com/accidental__aRt). This geom can come in handy for some data visualizations, you can see it in action at [the end of this post](#show-me-more)!
+Yes, I bet you are thinking this could go to [accidental aRt](https://twitter.com/accidental__aRt). But depending the visualization you are creating, this `geom` can come in handy for some data cases, you can see it in action at [the end of this post](#show-me-more)!
 
 But now let's look at straight lines or *links* between our nodes. We can of course pass aesthetics to all the `geom_edge_*()` functions, which refer to edge attributes. Let's color our edges by the type of road:
 
@@ -194,11 +194,11 @@ ggraph(net, layout_sf) +
   coord_sf(crs = st_crs(net))
 ```
 
-I know that for now you must be wondering: if we have a spatial set of edges with an explicit geometry, why are we just drawing plain lines? Well, remember I said this would be tricky? This is exactly what is missing from `ggraph` and the core of what I want to implement. 
+I know that for now you must be wondering: if we have a spatial set of edges with an explicit geometry, why are we just drawing plain lines? Well, remember I said this would be tricky? This is exactly what is missing from ggraph and the core of what I eventually want to implement. 
 
-But, do not despair! I am here to show you some workarounds, not fully ideal but something to work with in the meantime. Let's remember that ggraph subclasses a `ggplot` object, so we can combine `ggplot2` functions, and any other package that extends the grammar of graphics. 
+But, do not despair! I am here to show you some workarounds, not fully ideal but something to work with in the meantime. Let's remember that ggraph subclasses a `ggplot` object, so we can combine ggplot2 functions, and any other package that extends the grammar of graphics. 
 
-We will resort to `geom_sf()` for now. We can plot the edges of our network, by extracting them as an `sf` object with the function `st_as_sf()`. We have implemented a shortcut that allows you to choose which element of the network (nodes or edges), you want to extract. 
+We will resort to `geom_sf()` for now. We can plot the edges of our network, by extracting them as an `sf` object with the function `st_as_sf()`. We have implemented a shortcut that allows you to choose which element of the network (nodes or edges), you want to activate and extract. 
 
 ```{r}
 ggraph(net, layout = layout_sf) +
@@ -222,7 +222,7 @@ And there you have it, a swift overview of how to use `ggraph` and `sfnetworks` 
 
 # What can't be done?
 
-So yes, a lot can be done already, but as you may have noticed, there are certain things that just don't work yet with the current `ggraph` implementation. Here is a not at all comprehensive list of things that need some work:
+So yes, a lot can be done already, but as you may have noticed, there are certain things that just don't work yet with the current `ggraph` implementation. Here is a **not at all** comprehensive list of things that need some work:
 
 - The `layout_sf()` function I showed you above will not work when there are columns named `x` or `y`.
 - `ggraph()` does not consider the network CRS.
@@ -236,8 +236,13 @@ With `ggraph` one can give "color", "fill", "size", etc. aesthetics to both the 
 
 ```{r, error = T}
 ggraph(net, layout = layout_sf) +
-  geom_sf(data = st_as_sf(net, "edges"), aes(color = as.numeric(edge_circuity()))) +
-  geom_node_point(aes(color = centrality_betweenness())) +
+  geom_sf(
+    data = st_as_sf(net, "edges"), 
+    aes(color = as.numeric(edge_circuity()))
+  ) +
+  geom_node_point(
+    aes(color = centrality_betweenness())
+  ) +
   coord_sf(crs = st_crs(net))
 ```
 
@@ -261,16 +266,25 @@ remotes::install_github("loreabad6/ggraph")
 
 # Show me more!
 
-While testing my `ggraph` implementation, I started looking for some spatial network visualization examples done with R that I could recreate with my code. Here I will keep adding what I come up with. Bear in mind that most of these examples are created with `remotes::install_github("loreabad6/ggraph")`.
+While testing my `ggraph` implementation, I started looking for some spatial network visualization examples done with R that I could recreate with my code. Here I have added a couple of examples of what I came up with. Bear in mind that most of these examples are created with `remotes::install_github("loreabad6/ggraph")`.
 
 ### Break Free from Plastic 
 
-For week 5 of 2021 in the [Tidy Tuesday](https://github.com/rfordatascience/tidytuesday) weekly data project, we analyzed data from the "Break Free from Plastic" initiative. Here is a [step by step guide](https://github.com/loreabad6/TidyTuesday/blob/master/R/2021/week_05.md) on how to recreate the final plot.
+```{r, echo = F, fig.align = 'center'}
+knitr::include_graphics("https://raw.githubusercontent.com/loreabad6/TidyTuesday/master/plot/2021_week_05.png")
+```
 
-![](https://raw.githubusercontent.com/loreabad6/TidyTuesday/master/plot/2021_week_05.png)
+<aside>
+For week 5 of 2021 in the [Tidy Tuesday](https://github.com/rfordatascience/tidytuesday) weekly data project, we analyzed data from the "Break Free from Plastic" initiative. Here is a [step by step guide](https://github.com/loreabad6/TidyTuesday/blob/master/R/2021/week_05.md) on how to recreate the final plot.
+</aside>
+
 
 ### Airports in the U.S.
 
-This example is inspired on this [wonderful blogpost on Network Visualization](https://kateto.net/sunbelt2019#overlaying-networks-on-geographic-maps), where I tried to recreate the last plot showing airport connections and visitors in the U.S. Here is the [code to reproduce](https://github.com/loreabad6/ggraph-spatial-examples/blob/main/code/airports.R).
+```{r, echo = F, out.width="75%", fig.align = 'center'}
+knitr::include_graphics("https://raw.githubusercontent.com/loreabad6/ggraph-spatial-examples/main/figs/us_airports.png")
+```
 
-![](https://raw.githubusercontent.com/loreabad6/ggraph-spatial-examples/main/figs/us_airports.png)
+<aside>
+This example is inspired on this [wonderful blogpost on Network Visualization](https://kateto.net/sunbelt2019#overlaying-networks-on-geographic-maps), where I tried to recreate the last plot showing airport connections and visitors in the U.S. Here is the [code to reproduce](https://github.com/loreabad6/ggraph-spatial-examples/blob/main/code/airports.R).
+</aside>
