--- a/_posts/2021-03-03-geospatial-network-visualization/geospatial-network-visualization.Rmd
+++ b/_posts/2021-03-03-geospatial-network-visualization/geospatial-network-visualization.Rmd
@@ -2,7 +2,7 @@
 title: "Geospatial Network Visualization"
 description: "{sfnetworks} meets {ggraph}"
 author: Lorena Abad
-date: 02-27-2021
+date: 03-03-2021
 output:
   distill::distill_article:
     toc: true
@@ -13,7 +13,7 @@ categories:
   - r-spatial
   - dataviz
   - networks
-draft: true
+draft: false
 ---
 
 ```{r setup, include=FALSE}
@@ -39,15 +39,25 @@ which = c("output", "message", "error"))
 
 # What is this about?
 
-This post is to document my personal exploration on how to visualize spatial networks created with `sfnetworks` using `ggraph`. This all started with a [sfnetworks hackathon](https://github.com/sfnetworks/sfnetworks_viz) and should end with a successful PR to `ggraph`. 
+This post is to document my personal exploration on how to visualize spatial networks created with `sfnetworks` using `ggraph`. This all started with a [sfnetworks hackathon](https://github.com/sfnetworks/sfnetworks_viz) and should end with a successful pull request (PR) to `ggraph`. 
 
 I should start by saying, that it is probably a good idea to get familiar with `ggraph` (and `tidygraph` and `sfnetworks` while you are at it!) before going through this post. 
 
-If you are already a `ggraph` + `tidygraph` user and would like to apply the possibilities to the *spatial domain*, then this is definitely a resource for you and a good opportunity to learn about `sfnetworks`!
+If you are already a `ggraph` + `tidygraph` user and would like to apply the possibilities to the *spatial domain*, then this is definitely a resource for you and a good opportunity to learn about sfnetworks!
 
 # What can be done?
 
-There are already several possibilities to use `sfnetworks` and `ggraph` together. *Why?* you may be wondering... well because `ggraph` was built as a way to visualize `tbl_graph`s from `tidygraph`, and guess what? `sfnetwork` sub-classes `tbl_graph` so basically you can do all sort of crazy graph representations with an `sfnetwork` already. 
+There are already several possibilities to use sfnetworks and ggraph together. *Why?* you may be wondering. Well because ggraph was built as a way to visualize `tbl_graph`s from tidygraph, and guess what? `sfnetwork` objects sub-classes `tbl_graph`.
+Let's look at the `roxel` demo dataset from sfnetworks. 
+
+```{r}
+library(sfnetworks)
+library(sf)
+net = as_sfnetwork(roxel, directed = F)
+class(net)
+```
+
+So basically you can do all sort of crazy graph representations with an `sfnetwork` already. 
 
 The real aim of this integration is to allow you to do all this crazy graph representations **+** graph representations in geographical space! Not everything is possible yet, and you will see below some limitations. 
 
@@ -87,18 +97,33 @@ ggplot(labs, aes(x, y)) +
 
 3. *Edges* refer to the way nodes are connected between each other visually. Again here we are talking about `ggplot2` geometries and the `geom_edge_*()` functions should give you a big pool of options to represent this. 
 
-Let's go through the possibilities to use each pillar with `sfnetworks` objects.
+Let's go through the possibilities to combine these elements with `sfnetwork` objects.
 
 ## 1. `layout_sf()`
 
-As mentioned before, a *layout* is basically the physical representation of where to place our nodes. Talking about geospatial networks, what better place to put them than in their geographical location! A really nice thing about `ggraph`, is that you can give your own customized layout, by passing custom X and Y coordinates for node placement.
-
-In `sfnetworks`, we have a spatial network consisting of nodes and edges. These interrelated objects are stored together as `sf` tibbles into an `sfnetwork` object. Since we have a nice integration with `sf`, we can extract the coordinates of our nodes as an X and Y list, which we can pass to `ggraph`. Let me give you a quick demo instead of all these words. I will illustrate this with the `roxel` dataset from `sfnetworks`.
+As mentioned before, a *layout* is basically the physical representation of where to place our nodes. When we are dealing with non-spatial network representations we must remember that the nodes are not meant to represent actual locations on Earth, but can be placed anywhere. ggraph provides several algorithms to make this happen. Let's take one of the examples in the [ggraph layout vignette](https://ggraph.data-imaginist.com/articles/Layouts.html) to illustrate. This will include the *layout* + *nodes* + *edges* in a non-geographical representation.
 
 ```{r}
-library(sfnetworks)
-library(sf)
-(net = as_sfnetwork(roxel, directed = F))
+library(ggraph)
+library(tidygraph)
+library(tidyverse)
+ggraph(
+  filter(net, group_components() == 1), 
+  layout = 'focus', 
+  focus = node_is_center()
+) + 
+  ggforce::geom_circle(aes(x0 = 0, y0 = 0, r = r), data.frame(r = 1:5), colour = 'grey') + 
+  geom_edge_link() + 
+  geom_node_point() + 
+  coord_fixed()
+```
+
+But when talking about geospatial networks, we would usually want to place the nodes in their geographical location. A really nice thing about `ggraph`, is that you can give your own customized layout, by passing custom X and Y coordinates for node placement!
+
+In sfnetworks, we have a spatial network consisting of nodes and edges. Since we have a nice integration with `sf`, we can extract the coordinates of our nodes as an X and Y coordinate dataframe, which we can pass to `ggraph`. Let me give you a quick demo instead of all these words. 
+
+```{r}
+net
 net %>% st_coordinates() %>% head()
 ```
 
@@ -121,7 +146,7 @@ library(ggraph)
 ggraph(net, layout = layout_sf)
 ```
 
-Yes! That's it. You are probably looking now at a beautiful white canvas, but internally `ggraph()` has already a plan for every node you will map next, let's see it in action in the next step.
+Yes! That's it. You are probably looking now at a beautiful blank canvas, but internally `ggraph()` has already a plan for every node you will map next, let's see it in action in the next step.
 
 ## 2. `geom_node_*()`
 
@@ -136,7 +161,7 @@ ggraph(net, layout = layout_sf) +
 
 Oh yes, there are our nodes! But wait... If you are familiar with the sfnetworks vignettes, you might be thinking: *this looks distorted...* and yes, it does. 
 
-Unfortunately, `ggraph()` does not know about CRS so it will accommodate your X and Y axes to the size of your plot. This is one of the reasons why some internal tweaks are needed in ggraph to make this work better. But for now a way to go around this is to use `coord_sf()`:
+Unfortunately, `ggraph()` does not know about coordinate reference systems (CRS) so it will accommodate your X and Y axes to the size of your plot. This is one of the reasons why some internal tweaks are needed in ggraph to make this work better. But for now a way to go around this is to use `coord_sf()`:
 
 ```{r}
 ggraph(net, layout = layout_sf) +
@@ -146,7 +171,7 @@ ggraph(net, layout = layout_sf) +
 
 Much better. Now, our plot also takes into consideration the CRS and places our nodes properly. 
 
-Now let's give some aesthetics to our plot. If you scroll back up, you will see that our nodes don't have attributes, other than their geometry, so what should we look at? What about the degree centrality of the node? This will assign the count of the adjacent edges of each of our nodes. We can do this with the `centrality_degree()` function in `tidygraph`.
+Now let's give some aesthetics to our plot. If you scroll back up, you will see that our nodes don't have attributes, other than their geometry, so what should we look at? What about the degree centrality of the node? This will calculate the number of incident edges for each of our nodes. We can do this with the `centrality_degree()` function in `tidygraph`.
 
 A really nice feature about `ggraph` is that we don't need to go back to our original graph, mutate our network, save as a new object, and then call it again inside `ggraph()`. We can just call the function directly inside the `aes()`, where the calculation will be done on the fly! [Read more about it here.](https://ggraph.data-imaginist.com/articles/tidygraph.html#access-to-tidygraph-algorithms-in-ggraph-code-1)
 
@@ -161,14 +186,12 @@ Directly passing functions also works inside `facet_*()` functions. sfnetworks h
 
 ```{r}
 ggraph(net, layout = layout_sf) +
-  geom_node_point(
-    aes(color = centrality_degree())
-  ) +
+  geom_node_point(aes(color = centrality_degree())) +
   coord_sf(crs = st_crs(net)) +
   facet_nodes(~node_X() > 7.535)
 ```
 
-OK, probably not a real world case scenario, but it gives an overview of what can be done! 
+OK, probably not a real-world case scenario, but it gives an overview of what can be done! 
 
 Let's move on to the final step, and connect these nodes to each other. 
 
@@ -183,7 +206,7 @@ ggraph(net, layout_sf) +
   coord_sf(crs = st_crs(net))
 ```
 
-Yes, I bet you are thinking this could go to [accidental aRt](https://twitter.com/accidental__aRt). But depending the visualization you are creating, this `geom` can come in handy for some data cases, you can see it in action at [the end of this post](#show-me-more)!
+Yes, I bet you are thinking this could go to [accidental aRt](https://twitter.com/accidental__aRt). But depending on the visualization you are creating, this `geom` can come in handy for some data cases, you can see it in action at [the end of this post](#show-me-more)!
 
 But now let's look at straight lines or *links* between our nodes. We can of course pass aesthetics to all the `geom_edge_*()` functions, which refer to edge attributes. Let's color our edges by the type of road:
 
@@ -207,7 +230,7 @@ ggraph(net, layout = layout_sf) +
   coord_sf(crs = st_crs(net))
 ```
 
-And there we go, a nice representation of a geospatial network! We can of course pass some aesthetics as well, for example an spatial edge predicate implemented in sfnetworks: `edge_circuity()`. You will see now that we can pass this predicates directly to the aesthetics inside `geom_sf()` and since our main object is a `ggraph` this expression will be evaluated in the network, pretty exciting!!
+And there we go, a nice representation of a geospatial network! We can of course pass some aesthetics as well, for example an spatial edge predicate implemented in sfnetworks: `edge_circuity()`. You will see now that we can pass these predicates directly to the aesthetics inside `geom_sf()` and since our main object is a `ggraph` this expression will be evaluated in the network, pretty exciting!!
 
 ```{r}
 ggraph(net, layout = layout_sf) +
@@ -232,7 +255,7 @@ This last one comes with a couple more problems:
 
 ### Multiple scales for the same aesthetic
 
-With `ggraph` one can give "color", "fill", "size", etc. aesthetics to both the nodes and the edges. In our current workaround this is not working so good. The plot will get rendered properly with the corresponding colors, but the legend does not know what to do, and will only use one of the scale elements, without a warning!
+With `ggraph` one can give "color", "fill", "size/width", etc. aesthetics to both the nodes and the edges. In our current workaround this is not working so good. The plot will get rendered properly with the corresponding colors, but the legend does not know what to do, and will only use one of the scale elements, without a warning!
 
 ```{r, error = T}
 ggraph(net, layout = layout_sf) +
@@ -266,7 +289,7 @@ remotes::install_github("loreabad6/ggraph")
 
 # Show me more!
 
-While testing my `ggraph` implementation, I started looking for some spatial network visualization examples done with R that I could recreate with my code. Here I have added a couple of examples of what I came up with. Bear in mind that most of these examples are created with `remotes::install_github("loreabad6/ggraph")`.
+While testing my `ggraph` implementation, I started looking for some spatial network visualization examples done with R that I could recreate with my code. Here I added two examples of what I came up with, and will probably add more to [this GitHub repository](https://github.com/loreabad6/ggraph-spatial-examples) if you are interested in following it up. Bear in mind that most of these examples are created with `remotes::install_github("loreabad6/ggraph")`.
 
 ### Break Free from Plastic 
 
