Add Twitter card

--- a/_posts/2021-03-05-geospatial-network-visualization/geospatial-network-visualization.Rmd
+++ b/_posts/2021-03-05-geospatial-network-visualization/geospatial-network-visualization.Rmd
@@ -13,6 +13,9 @@ categories:
   - r-spatial
   - dataviz
   - networks
+preview: figs/preview.png
+twitter:
+  creator: "@loreabad6"
 draft: false
 ---
 
