--- a/about.Rmd
+++ b/about.Rmd
@@ -11,6 +11,7 @@ links:
     url: "https://linkedin.com/in/lorena-abad/"
 output:
   postcards::jolla
+site: distill::distill_website
 ---
 
 I am a researcher with a background in environmental engineering and geospatial technologies. R is my go-to coding language for data science and visualization as well as scientific report and article writing. This blog is meant to share some tip and tricks I have learned along the way. You can reach me at any of the links below!
