--- a/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.Rmd
+++ b/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.Rmd
@@ -15,7 +15,8 @@ categories:
   - dataviz
   - 30daymapchallenge
   - rstats
-preview: https://loreabad6.github.io/posts/2021-11-30-30daymapchallenge-rstats/figs/summary.png
+base_url: https://loreabad6.github.io
+preview: figs/summary.png
 twitter:
   site: "@loreabad6"
   creator: "@loreabad6"
