--- a/_posts/2021-03-21-have-you-ever-seen-the-rain/have-you-ever-seen-the-rain.Rmd
+++ b/_posts/2021-03-21-have-you-ever-seen-the-rain/have-you-ever-seen-the-rain.Rmd
@@ -3,7 +3,7 @@ title: "Have You Ever Seen the Rain?"
 description: |
   Explore CHIRPS rainfall data in R
 author: Lorena Abad
-date: 2021-03-21
+date: 2023-03-21
 output:
   distill::distill_article:
     toc: true
@@ -23,13 +23,13 @@ bibliography: bib.bib
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-chirps21 = !file.exists("E:/Personal_projects/loreabad6.github.io/_posts/2021-03-21-have-you-ever-seen-the-rain/temp/chirps-v2.0.2021.days_p05.nc")
+knitr::opts_chunk$set(echo = TRUE)
+chirps23 = !file.exists(here::here("_posts/2021-03-21-have-you-ever-seen-the-rain/temp/chirps-v2.0.2023.days_p05.nc"))
 ```
 
 # Background 
 
-About two years ago I created a [repository on GitHub](https://github.com/loreabad6/chirps-stars) to document steps on how to load CHIRPS rainfall data into R and explore it using the `stars` package. Since then, my workflows have changed significantly, and my way of accessing this data has evolved. I noticed some people were interested in this repository, so here is a post on two ways I access this data for my current work. 
+Some years ago I created a [repository on GitHub](https://github.com/loreabad6/chirps-stars) to document steps on how to load CHIRPS rainfall data into R and explore it using the `stars` package. Since then, my workflows have changed significantly, and my way of accessing this data has evolved. I noticed some people were interested in this repository, so here is a post on two ways I access this data for my current work. 
 
 # What is CHIRPS data?
 
@@ -56,45 +56,47 @@ library(rnaturalearth)
 
 We can try to download the data with R. Beware, in Windows this can be a bit tricky if not configured correctly (see a related stack overflow question [here](https://stackoverflow.com/questions/51911544/r-crashes-while-opening-netcdf-file)). The code below worked for me. If downloading data at a finer resolution (0.05º) times out, we can always download the data manually from the CRC repository from [this link](https://data.chc.ucsb.edu/products/CHIRPS-2.0/global_daily/netcdf/).
 
-```{r, eval = chirps21}
-chirps_url = "https://data.chc.ucsb.edu/products/CHIRPS-2.0/global_daily/netcdf/p25/chirps-v2.0.2021.days_p25.nc"
+```{r, eval = chirps23}
+chirps_url = "https://data.chc.ucsb.edu/products/CHIRPS-2.0/global_daily/netcdf/p25/chirps-v2.0.2023.days_p25.nc"
 if (!dir.exists("temp")) dir.create("temp")
-download.file(
-  url = chirps_url,
-  destfile = "temp/chirps-v2.0.2021.days_p25.nc", 
-  mode = "wb"
-)
+if (!file.exists("temp/chirps-v2.0.2023.days_p25.nc")) {
+  download.file(
+    url = chirps_url,
+    destfile = "temp/chirps-v2.0.2023.days_p25.nc", 
+    mode = "wb"
+  )
+}
+
 ```
 
 Then we can read in the data with the stars package. 
 
 ```{r}
-chirps_daily_2021 = read_stars("temp/chirps-v2.0.2021.days_p25.nc")
-
-chirps_daily_2021
+chirps_daily_2023 = read_stars("temp/chirps-v2.0.2023.days_p25.nc")
+chirps_daily_2023
 ```
 
 ```{r}
-chirps_daily_2021 %>% slice(time, 16) %>% plot(breaks = 'equal')
+chirps_daily_2023 |> slice(time, 18) |> plot(breaks = 'equal')
 ```
 
 I usually perform my analysis at a country or regional scale rather than a global scale, so let's see how we can subset this dataset for a specific region. We will use the `rnaturalearth` package to obtain the polygon of a country, in this case, my home country Ecuador.
 
 ```{r}
 world = ne_countries(scale = 'medium', returnclass = 'sf')
-ecuador = world %>%
+ecuador = world |>
   filter(admin == 'Ecuador')
 ```
 
-To subset the data need to make the Coordinate Reference System (CRS) of both the chirps data and our country sf object the same. Let's check the CRS for both:
+To subset the data, we need to make the Coordinate Reference System (CRS) of both the chirps data and our country sf object the same. Let's check the CRS for both:
 
 ```{r}
 ecuador_proj = st_transform(ecuador, 4326)
-chirps_daily_2021 = st_set_crs(chirps_daily_2021, 4326)
+chirps_daily_2023 = st_set_crs(chirps_daily_2023, 4326)
 
-chirps_ecuador = chirps_daily_2021[ecuador_proj]
+chirps_ecuador = chirps_daily_2023[ecuador_proj]
 
-chirps_ecuador[,,,1:15] %>% plot()
+chirps_ecuador[,,,1:9] |> plot()
 ```
 
 ```{r}
@@ -103,15 +105,35 @@ time_series = st_apply(chirps_ecuador, "time", mean, na.rm = TRUE)
 
 ```{r}
 ggplot() +
-  geom_stars(data = chirps_ecuador[,,,1:20]) +
-  scale_fill_viridis_c(na.value = 'white') +
+  geom_stars(data = chirps_ecuador[,,,1:12]) +
+  scale_fill_viridis_c("Precipitation (mm/day)", na.value = 'white') +
+  facet_wrap(~time) +
   coord_sf() +
-  theme_void()
+  theme_void() +
+  theme(legend.position = 'top')
+```
+```{r}
+time_series |> 
+  as_tibble() |> 
+  ggplot() +
+  geom_line(aes(y = mean, x = time)) +
+  scale_y_continuous("Mean precipitation (mm/day)")
+```
+
+```{r, eval = FALSE}
+# Descargar provincias y cantones de Ecuador
+if (!dir.exists("temp")) dir.create("temp")
+src = 'http://www.ecuadorencifras.gob.ec//documentos/web-inec/Cartografia/Clasificador_Geografico/2012/SHP.zip'
+dst = 'temp/inec.zip'
+if (!file.exists(dst)) {
+  download.file(src, dst)
+  unzip(dst, exdir = "temp")
+}
 ```
 
 ## Earth Engine
 
-```{r}
+```{r, eval = FALSE}
 library(rgee)
 ee_Initialize()
 
