Add Jakubs talk

--- a/posts/2023-10-17-stac-across-languages/bib.bib
+++ b/posts/2023-10-17-stac-across-languages/bib.bib
@@ -32,3 +32,9 @@
   url = {https://stackstac.readthedocs.io/en/latest/},
   year = {2023},
 },
+@online{nowosad2023,
+  author = {Nowosad, Jakub},
+  title = "Sharing your geospatial knowledge in the open",
+  url = {https://www.youtube.com/watch?v=AUt-GOZJQaY&ab_channel=TomislavHengl%28OpenGeoHubFoundation%29},
+  year = {2023},
+}
