Add BNA presentations

--- a/presentations.qmd
+++ b/presentations.qmd
@@ -34,9 +34,16 @@ Introducción al paquete sfnetworks: Análisis de redes geoespaciales con R. 15-
 
 Mapping and monitoring landslide-dammed lakes in Kaikōura, New Zealand using the Google Earth Engine. 21-10-2020. Geo For Good User Summit 2020 - Public Sector Meetup (online). [Slides](https://qrgo.page.link/izjEp) | [Poster](https://docs.google.com/presentation/d/1FVrxwwuBUsb69OKYbyssNDphket-6V4nhlK1OuXVDdw) | [Video](https://www.youtube.com/live/CbHYkUpCwCI?feature=shared&t=3035)
 
+Bicycle Network Analysis for assessing cyclability. 24-09-2020, Cycling Potential Hackathon: Lisbon (online). [Slides](https://loreabad6.github.io/bna-presentation/bna-presentation.html#1)
+
+El rol de las tecnologías geoespaciales para el mapeo y monitoreo de peligros naturales. 19-09-2020, Voces de la  Ingeniería Ambiental, Cuenca, Ecuador (online).  [Slides](https://loreabad6.github.io/VocesAmbiental/presentacion.html) | [Video](https://www.facebook.com/watch/live/?extid=MZJv41PQtCQ5l6jT&ref=watch_permalink&v=327432258323373)
+
 Tidy Geospatial Networks in R: Introducing the sfnetworks package. 16-06-2020. e-Rum2020 statellite event: Hackathon on Spatial Networks, (online). [Slides](https://www.youtube.com/watch?v=ZXTNXsvKYwo&ab_channel=RobinLovelace) | [Video](https://www.youtube.com/watch?v=ZXTNXsvKYwo&ab_channel=RobinLovelace)
 
 Mapping and monitoring of landslide-dammed lakes using Sentinel-2 time series. 07-05-2020. EGU General Assembly 2020, Vienna, Austria (online).
 [Abstract](https://meetingorganizer.copernicus.org/EGU2020/EGU2020-572.html) | [Slides](https://presentations.copernicus.org/EGU2020/EGU2020-572_presentation.pdf)
 
-El rol de las tecnologías geoespaciales para el mapeo y monitoreo de peligros naturales. 19-09-2020, Voces de la  Ingeniería Ambiental, Cuenca, Ecuador (online).  [Slides](https://loreabad6.github.io/VocesAmbiental/presentacion.html) | [Video](https://www.facebook.com/watch/live/?extid=MZJv41PQtCQ5l6jT&ref=watch_permalink&v=327432258323373)
+
+## 2018
+
+Bike Network Analysis in Lisbon. 12-06-2018, Open Data for Open Cities v 2.0 - AGILE 2018 Workshop, Lund Sweden. [Slides](https://drive.google.com/file/d/1yBzFEb9vSe3ScHxAb-rcWuBYAPYDZpet/view?usp=sharing)
