--- a/presentations.qmd
+++ b/presentations.qmd
@@ -4,6 +4,8 @@ title: "Presentations and Workshops"
 
 ## 2023
 
+Spatial Data Science across Languages (SDSL). 19-19.09.2023. Workshop organized by NFDI4Earth and ifgi, University of Munster,  Münster, Germany. [Website](https://r-spatial.org/sdsl/)
+
 Tools and packages to query and process Sentinel-1 and Sentinel-2 data with R and Python. 31-08-2023. OpenGeoHub Summer School Poznan 2023, Poznan, Poland. [Material](https://loreabad6.github.io/ogh23/) | [Video Part 1](https://www.youtube.com/live/WRxmAhDEQFE?feature=shared) | [Video Part 2](https://www.youtube.com/live/a8X_jFN63Wc?feature=shared)
 
 Open data and open science for risk, hazard and climate assessments. 30-08-2023. Discussion Forum "What can R, Python, and Julia development communities do to combat the climate crisis?". OpenGeoHub Summer School Poznan 2023, Poznan, Poland. [Video](https://youtu.be/qiUh9WjozRA)
