Add SDSL slides

--- a/presentations.qmd
+++ b/presentations.qmd
@@ -4,6 +4,9 @@ title: "Presentations and Workshops"
 
 ## 2024
 
+Vector data cubes for changing geometries. 18.09.2024. Spatial Data Science across Languages workshop. 2024, Prague, Czechia.
+[Slides](https://loreabad6.github.io/slides/sdsl-data-structures.html)
+
 R for spatio-temporal handling of moving polygons. 10.07.2024. UseR! 2024, Salzburg, Austria. [Abstract](https://userconf2024.sched.com/event/1c8wq/poster-session-guided-tours-r-for-spatio-temporal-handling-of-moving-polygons-lorena-abad-university-of-salzburg) | [PDF Poster](https://loreabad6.github.io/posters/UseR24/useR2024_Abad.pdf)
 
 Vector data cubes for features evolving in space and time. 05.06.2024. Short Paper presentation, AGILE 2024, Glasgow, UK. [Slides](https://loreabad6.github.io/vdc-space-time-feats/presentation/agile24.html#/title-slide) | [Conference paper](https://doi.org/10.5194/agile-giss-5-16-2024) | [Reproducible code and showcase notebook](https://github.com/loreabad6/vdc-space-time-feats?tab=readme-ov-file)
