Add Google appointments link

--- a/about.qmd
+++ b/about.qmd
@@ -13,6 +13,9 @@ about:
     - icon: 'linkedin'
       text: 'LinkedIn'
       href: "https://linkedin.com/in/lorena-abad/"
+    - icon: 'google'
+      text: 'Meet me'
+      href: "https://calendar.google.com/calendar/appointments/schedules/AcZssZ082mdNhUYWD11jgoByU9L7JA57pUO4Nex23Cv6atVOnsmrZgwnmoDR04Hf93VPtln6EouQSkjf?gv=true"
 ---
 
 I am a researcher with a background in environmental engineering and geospatial technologies. R is my go-to coding language for data science and visualization as well as scientific report and article writing. This blog is meant to share some tip and tricks I have learned along the way. You can reach me at any of the links below!
